--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "semver": "6.3.0",
@@ -69,7 +68,6 @@
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
-    "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
     "workbox-webpack-plugin": "4.3.1"
@@ -145,6 +143,9 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.0.1"
+    "eslint-config-airbnb": "^18.0.1",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
+    "webpack": "^4.41.0"
   }
 }
