--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "url-loader": "2.1.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
