unit tests for reducers with jest

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -2,7 +2,8 @@
   "env":
    {
      "node": true,
-     "browser": true
+     "browser": true,
+     "jest": true
    },
   "extends": "airbnb",
   "parser": "babel-eslint"
