--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
@@ -146,6 +145,7 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
+    "jest": "^24.9.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "webpack": "^4.41.0"
